# SSDD_P3

./: .gitignore  README.md
src/: CMakeLists.txt  app-cliente.c  compile.sh  proxy-rpc.c  proxy-sock.c  rpc_api.x  servidor-rpc.c  servidor-sock.c  stressometer.py  test.py
src/common/: claves.c  claves.h  encript.c  encript.h  lines.c  lines.h  serialitation.c  serialitation.h
